Use toList.